[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claw-proxy"
version = "0.1.0"
description = "Quota-aware OpenAI-compatible gateway routing to GitHub Copilot, Claude Code CLI, or local LM Studio"
readme = "README.md"
license = { text = "AGPL-3.0" }
authors = [{ name = "OpenQlaw", email = "dariensirius@protonmail.com" }]
requires-python = ">=3.10"
keywords = ["llm", "proxy", "openai", "copilot", "claude", "lmstudio", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
    "detect-secrets>=1.4",
    "pre-commit>=3.7",
]

[project.scripts]
claw-proxy = "claw_proxy.main:run"

[project.urls]
Homepage = "https://github.com/OpenQlaw/claw-proxy"
Issues = "https://github.com/OpenQlaw/claw-proxy/issues"
Changelog = "https://github.com/OpenQlaw/claw-proxy/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["claw_proxy*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
